--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL = mongodb+srv://Ecommerce:authentication@cluster0.ncuib.mongodb.net/TriAngle?retryWrites=true&w=majority
-
+MONGO_USER=Ecommerce
+MONGO_PASS=authentication
 JWT_SECRET = security
